--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: 'CustomFont';
+    src: url('font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}           
             * {
                 box-sizing: border-box;
             }
@@ -121,7 +127,7 @@
                 flex-direction: column;
                 max-width: 80%;
                 color: white;
-                font-family: 'Poppins', sans-serif;
+                font-family: 'Poppins';
                 margin-top: -8px;
                 margin-left: 10%;
             }
@@ -157,6 +163,7 @@
             .main-tweet {
                 font-size: 16px;
                 margin-top: 16px;
+                font-family: 'CustomFont';
             }
 
             .profile-info div {
