--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@
                 font-size: 16px;
                 margin-top: 16px;
                 font-family: 'CustomFont';
+                line-height: 20px;
             }
 
             .profile-info div {
