--- a/style.css
+++ b/style.css
@@ -166,6 +166,18 @@
                 font-family: 'CustomFont';
                 line-height: 20px;
             }
+            .color-picker{
+                margin: 16px!important;
+                display: block;
+                width:100%;
+                height: 56px;
+                border-radius: 12px;
+                padding-left: 16px;
+                font-size: 18px;
+                font-family: 'Poppins';
+                border: 0;
+                outline: 0;
+            }
 
             .profile-info div {
                 font-size: 14px;
