--- a/style.css
+++ b/style.css
@@ -114,11 +114,13 @@
                     color: #2196F3;
                     top: -8px;
                     display: flex;
-                    left: -176px;
+                    left: -178px;
                     min-width: 384px;
                     font-size: 12px;
                     justify-content: center;
                     font-family: 'Poppins', sans-serif;
+                    border: 0;
+                    
                 }
             }
 
@@ -168,7 +170,7 @@
             }
             .color-picker{
                 margin: 16px!important;
-                display: block;
+                display: flex;
                 width:100%;
                 height: 56px;
                 border-radius: 12px;
@@ -178,7 +180,9 @@
                 border: 0;
                 outline: 0;
             }
-
+.clr-field{
+    display: none;
+}
             .profile-info div {
                 font-size: 14px;
             }
