--- a/style.css
+++ b/style.css
@@ -3,304 +3,362 @@
     src: url('font.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}           
-            * {
-                box-sizing: border-box;
-            }
+}
 
-            html {
-                background: #212121;
-                height: 100%;
-                width: 100%;
-                margin: 0;
-                padding: 0;
-                overflow-x: hidden;
-            }
+* {
+    box-sizing: border-box;
+}
 
-            body {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-                height: 100%;
-                width: 100%;
-                display: flex;
-                flex-direction: row;
-                font-family: Poppins;
-                overflow: hidden;
-            }
+html {
+    background: #212121;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 
-            main {
-                height: 100%;
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-                display: flex;
-                flex-direction: column;
-                font-family: Poppins;
-                overflow: hidden;
-            }
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    font-family: Poppins;
+    overflow: hidden;
+}
 
-            #container {
-                width: 100vw;
-                outline: 0;
-                min-height: 100vw;
-                border: 0;
-                background: var(--bg);
-                overflow: hidden;
-                display: flex;
-                align-items: center;
-                top: 0;
-                left: 0;
-            }
+main {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    font-family: Poppins;
+    overflow: hidden;
+}
 
-            #container2 {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-                background: #212121;
-                display: flex;
-                flex-direction: column;
-                font-family: Poppins;
-                overflow: hidden scroll;
-                height: 50%;
-                width: 100%;
-            }
 
-            .link {
-                position: absolute;
-                color: #2196F3;
-                margin-bottom: 0;
-                margin-top: auto;
-                display: flex;
-                top: calc(384px - 20px);
-                width: 394px;
-                font-size: 12px;
-                justify-content: center;
-                font-family: 'Poppins', sans-serif;
-            }
+/* 
+#container2::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
 
-            @media only screen and (min-width: 768px) {
-                body {
-                    align-items: center;
-                    justify-content: center;
-                    overflow: hidden;
-                }
+#container2::-webkit-scrollbar {
+    max-height: 5px;
+    background-color: #F5F5F5;
+}
 
-                main {
-                    flex-direction: row;
-                    height: 384px;
-                    width: 768px;
-                    border: 2px solid white;
-                    background-size: 50px;
-                    background-repeat: repeat;
-                    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Chess_Board.svg/1024px-Chess_Board.svg.png);
-                }
+#container2::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 1px solid #555555;
+} */
 
-                #container {
-                    aspect-ratio: 1;
-                    min-width: 384px;
-                    height: 384px;
-                    min-height: 384px;
-                    width: 384px;
-                }
+#container {
+    width: 100vw;
+    outline: 0;
+    min-height: 100vw;
+    border: 0;
+    background: var(--bg);
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    top: 0;
+    left: 0;
+}
 
-                #container2 {
-                    height: 384px;
-                    max-width: 384px;
-                }
+#container2 {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: #212121;
+    display: flex;
+    flex-direction: column;
+    font-family: Poppins;
+    overflow: hidden scroll;
+    height: 50%;
+    width: 100%;
+}
 
-                .link {
-                    position: relative;
-                    color: #2196F3;
-                    top: -8px;
-                    display: flex;
-                    left: -178px;
-                    min-width: 384px;
-                    font-size: 12px;
-                    justify-content: center;
-                    font-family: 'Poppins', sans-serif;
-                    border: 0;
-                    
-                }
-            }
+.link {
+    position: absolute;
+    color: #2196F3;
+    margin-bottom: 0;
+    margin-top: auto;
+    display: flex;
+    top: calc(384px - 20px);
+    width: 394px;
+    font-size: 12px;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+}
 
-            #tweet {
-                display: flex;
-                flex-direction: column;
-                max-width: 80%;
-                color: white;
-                font-family: 'Poppins';
-                margin-top: -8px;
-                margin-left: 10%;
-            }
+@media only screen and (min-width: 768px) {
+    body {
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    main {
+        flex-direction: row;
+        height: 384px;
+        width: 768px;
+        border: 2px solid white;
+        background-size: 50px;
+        background-repeat: repeat;
+        background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Chess_Board.svg/1024px-Chess_Board.svg.png);
+    }
+    #container {
+        aspect-ratio: 1;
+        min-width: 384px;
+        height: 384px;
+        min-height: 384px;
+        width: 384px;
+    }
+    #container2 {
+        height: 384px;
+        max-width: 384px;
+    }
+    .link {
+        position: relative;
+        color: #2196F3;
+        top: -8px;
+        display: flex;
+        min-width: 384px;
+        font-size: 12px;
+        left: -346px;
+        justify-content: center;
+        font-family: 'Poppins', sans-serif;
+        border: 0;
+    }
+}
 
-            .top {
-                display: flex;
-            }
+#tweet {
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    min-width: 80%;
+    color: white;
+    font-family: 'Poppins';
+    margin-top: -8px;
+    margin-left: 10%;
+}
 
-            .profile-image {
-                aspect-ratio: 1/1;
-                width: 44px;
-                height: 44px;
-                border-radius: 6vw;
-                background: white;
-                margin-right: 15px;
-                object-fit: cover;
-            }
+.top {
+    display: flex;
+}
 
-            #downloadButton {
-                margin-top: 20px;
-                padding: 12px 16px;
-                display: flex;
-                justify-content: center;
-                background: #2196F3;
-                border: 0;
-                border-radius: 8px;
-                font-family: Poppins;
-                color: white;
-                font-weight: bold;
-                margin: 20px 16px 16px 16px;
-            }
+.profile-image {
+    aspect-ratio: 1/1;
+    width: 44px;
+    height: 44px;
+    border-radius: 6vw;
+    background: white;
+    margin-right: 15px;
+    object-fit: cover;
+}
 
-            .main-tweet {
-                font-size: 16px;
-                margin-top: 16px;
-                font-family: 'CustomFont';
-                line-height: 20px;
-            }
-            .color-picker{
-                margin: 16px!important;
-                display: flex;
-                width:100%;
-                height: 56px;
-                border-radius: 12px;
-                padding-left: 16px;
-                font-size: 18px;
-                font-family: 'Poppins';
-                border: 0;
-                outline: 0;
-            }
-.clr-field{
+#downloadButton {
+    margin-top: 20px;
+    padding: 12px 16px;
+    display: flex;
+    justify-content: center;
+    background: #2196F3;
+    border: 0;
+    border-radius: 8px;
+    font-family: Poppins;
+    color: white;
+    font-weight: bold;
+    margin: 20px 16px 16px 16px;
+}
+
+.main-tweet {
+    font-size: 16px;
+    margin-top: 16px;
+    font-family: 'CustomFont';
+    line-height: 20px;
+    width: 100%;
+}
+
+.color-picker {
+    margin: 16px!important;
+    display: flex;
+    width: 100%;
+    height: 56px;
+    border-radius: 12px;
+    padding-left: 16px;
+    font-size: 18px;
+    font-family: 'Poppins';
+    border: 0;
+    outline: 0;
+    color: #838383;
+    background-color: #000000;
+}
+
+#font {
+    margin: 16px!important;
+    display: flex;
+    height: 56px;
+    border-radius: 12px;
+    padding: 16px;
+    font-size: 18px;
+    font-family: 'Poppins';
+    border: 0;
+    outline: 0;
+    color: #838383;
+    background-color: #000000;
+}
+
+.clr-field {
+    display: none;
+    display: flex!important;
+}
+
+.profile-info div {
+    font-size: 14px;
+}
+
+hr {
+    margin: 0;
+    padding: 0;
+    border: 1px solid white;
+    outline: none;
+}
+
+.background {
+    display: flex;
+    padding: 0;
+    overflow: scroll hidden;
+    margin: 16px 8px 8px 8px;
+    min-height: 96px;
+}
+
+.background::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+}
+
+.background::-webkit-scrollbar {
+    max-height: 5px;
+    background-color: #F5F5F5;
+}
+
+.background::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border: 1px solid #555555;
+}
+
+.clr-field button {
     display: none;
 }
-            .profile-info div {
-                font-size: 14px;
-            }
 
-            hr {
-                margin: 0;
-                padding: 0;
-                border: 1px solid white;
-                outline: none;
-            }
+.background li {
+    min-height: 80px;
+    min-width: 60px;
+    background: var(--bg);
+    list-style: none;
+    margin: 8px;
+    border-radius: 8px;
+    border: 1px solid #a0a0a0;
+    overflow: scroll;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    color: white;
+}
 
-            .background {
-                display: flex;
-                padding: 0;
-                overflow: scroll hidden;
-                margin: 16px 8px 8px 8px;
-                min-height: 96px;
-            }
+.background li::-webkit-scrollbar {
+    display: none;
+}
 
-            .background li {
-                min-height: 80px;
-                min-width: 60px;
-                background: var(--bg);
-                list-style: none;
-                margin: 8px;
-                border-radius: 8px;
-                border: 1px solid #a0a0a0;
-                overflow: scroll;
-                justify-content: center;
-                display: flex;
-                align-items: center;
-                color: white;
-            }
+.input {
+    flex: 1;
+    flex-grow: 1;
+    flex-flow: 1;
+    display: flex;
+    margin: 8px 16px;
+    border-radius: 8px;
+    min-height: 200px;
+    padding: 8px;
+    background: transparent;
+    outline: #2196f3;
+    color: white;
+    font-family: Poppins;
+}
 
-            .input {
-                flex: 1;
-                flex-grow: 1;
-                flex-flow: 1;
-                display: flex;
-                margin: 8px 16px;
-                border-radius: 8px;
-                min-height: 200px;
-                padding: 8px;
-                background: transparent;
-                outline: #2196f3;
-                color: white;
-                font-family: Poppins;
-            }
+.extra-box {
+    color: white;
+    margin: 8px 16px 8px 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-            .extra-box {
-                color: white;
-                margin: 8px 16px 8px 16px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    float: right;
+    right: 0;
+}
 
-            .switch {
-                position: relative;
-                display: inline-block;
-                width: 60px;
-                height: 34px;
-                float: right;
-                right: 0;
-            }
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
 
-            .switch input {
-                opacity: 0;
-                width: 0;
-                height: 0;
-            }
+.slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: gray;
+    border-radius: 34px;
+    transition: background-color 0.2s;
+}
 
-            .slider {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background-color: gray;
-                border-radius: 34px;
-                transition: background-color 0.2s;
-            }
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    border-radius: 50%;
+    transition: transform 0.2s;
+}
 
-            .slider:before {
-                position: absolute;
-                content: "";
-                height: 26px;
-                width: 26px;
-                left: 4px;
-                bottom: 4px;
-                background-color: white;
-                border-radius: 50%;
-                transition: transform 0.2s;
-            }
+input:checked+.slider {
+    background-color: #2196f3;
+}
 
-            input:checked+.slider {
-                background-color: #2196f3;
-            }
+input:checked+.slider:before {
+    transform: translateX(26px);
+}
 
-            input:checked+.slider:before {
-                transform: translateX(26px);
-            }
+.label-text-x,
+.prog {
+    color: white;
+    display: flex;
+    margin: 0px 16px 8px 16px;
+}
 
-            .label-text-x,
-            .prog {
-                color: white;
-                display: flex;
-                margin: 0px 16px 8px 16px;
-            }
+footer {
+    padding: 0 18px;
+    color: white;
+    text-align: center;
+}
 
-            footer {
-                padding: 0 18px;
-                color: white;
-                text-align: center;
-            }
-
-            footer a {
-                color: white;
-                display: inline-block;
-                margin: 0 8px;
-            }
+footer a {
+    color: white;
+    display: inline-block;
+    margin: 0 8px;
+}
