--- a/style.css
+++ b/style.css
@@ -4,6 +4,82 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Bold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-BoldItalic.otf') format('opentype');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Italic.otf') format('opentype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-LightItalic.otf') format('opentype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-MediumItalic.otf') format('opentype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-Extrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NeurialGrotesk';
+  src: url('fonts/NeurialGrotesk-ExtraboldItalic.otf') format('opentype');
+  font-weight: 800;
+  font-style: italic;
+}
+
+/* Example usage */
+body {
+  --font: 'NeurialGrotesk', sans-serif;
+  font-family: var(--font);
+
+}
 
 * {
     box-sizing: border-box;
@@ -26,7 +102,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    font-family: Poppins;
+    
     overflow: hidden;
 }
 
@@ -37,7 +113,7 @@ main {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    font-family: Poppins;
+    font-family: var(--font);
     overflow: hidden;
 }
 
@@ -78,7 +154,7 @@ main {
     background: #212121;
     display: flex;
     flex-direction: column;
-    font-family: Poppins;
+    font-family: var(--font);
     overflow: hidden scroll;
     height: 50%;
     width: 100%;
@@ -94,7 +170,7 @@ main {
     width: 394px;
     font-size: 12px;
     justify-content: center;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--font);
 }
 
 @media only screen and (min-width: 768px) {
@@ -132,7 +208,7 @@ main {
         font-size: 12px;
         left: -346px;
         justify-content: center;
-        font-family: 'Poppins', sans-serif;
+        font-family: var(--font);
         border: 0;
     }
 }
@@ -143,7 +219,7 @@ main {
     max-width: 80%;
     min-width: 80%;
     color: white;
-    font-family: 'Poppins';
+    font-family: var(--font);
     margin-top: -8px;
     margin-left: 10%;
 }
@@ -170,7 +246,7 @@ main {
     background: #2196F3;
     border: 0;
     border-radius: 8px;
-    font-family: Poppins;
+    font-family: var(--font);
     color: white;
     font-weight: bold;
     margin: 20px 16px 16px 16px;
@@ -192,7 +268,7 @@ main {
     border-radius: 12px;
     padding-left: 16px;
     font-size: 18px;
-    font-family: 'Poppins';
+    font-family: var(--font);
     border: 0;
     outline: 0;
     color: #838383;
@@ -206,7 +282,7 @@ main {
     border-radius: 12px;
     padding: 16px;
     font-size: 18px;
-    font-family: 'Poppins';
+    font-family: var(--font);
     border: 0;
     outline: 0;
     color: #838383;
@@ -220,6 +296,8 @@ main {
 
 .profile-info div {
     font-size: 14px;
+        font-family: var(--font);
+
 }
 
 hr {
@@ -287,7 +365,7 @@ hr {
     background: transparent;
     outline: #2196f3;
     color: white;
-    font-family: Poppins;
+    font-family: var(--font);
 }
 
 .extra-box {
