--- a/style.css
+++ b/style.css
@@ -102,8 +102,11 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    
-    overflow: hidden;
+    background-color: #000000;
+background-color: #171717;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23ffffff' fill-opacity='0.12'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
+
+
 }
 
 main {
